Fix bug: Add wrap to prevent new tweet text breaking out of page

--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -39,9 +39,10 @@
    padding: 10px;
  }
 
- .tweet p {
+ .new-tweet-text {
    font-size: 32px;
    font-weight: bold;
+   overflow-wrap: break-word;   
    padding: 18px;
    text-align: left;
  }
